--- a/.github/workflows/rapports.yaml
+++ b/.github/workflows/rapports.yaml
@@ -14,8 +14,10 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
 
-      - name: Install Dependencies
-        run: pip install pytest pytest-html
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run Tests
         run: pytest --html=reports/test_report.html --self-contained-html
