--- a/.github/workflows/rapports.yaml
+++ b/.github/workflows/rapports.yaml
@@ -19,6 +19,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)/Api" >> $GITHUB_ENV
+
       - name: Run Tests
         run: pytest --html=reports/test_report.html --self-contained-html
 
