--- a/.github/workflows/rapports.yaml
+++ b/.github/workflows/rapports.yaml
@@ -20,7 +20,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=$(pwd)/Api" >> $GITHUB_ENV
+        run: echo "PYTHONPATH=$(pwd)/TimeApi" >> $GITHUB_ENV
 
       - name: Run Tests
         run: pytest --html=reports/test_report.html --self-contained-html
