--- a/.github/workflows/rapports.yaml
+++ b/.github/workflows/rapports.yaml
@@ -20,11 +20,10 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Tests
-        run: pytest --html=reports/test_report.html --self-contained-html --rootdir=/home/runner/work/TimeApi/
+        run: pytest --html=reports/test_report.html --self-contained-html
 
       - name: Upload Test Report
         uses: actions/upload-artifact@v3
         with:
             name: test-report
             path: reports/test_report.html
-
