Modifi=y rapports.yaml

--- a/.github/workflows/rapports.yaml
+++ b/.github/workflows/rapports.yaml
@@ -13,17 +13,20 @@ jobs:
 
       - name: Setup Python
         uses: actions/setup-python@v2
+        with:
+          python-version: '3.12'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Tests
-        run: pytest --html=reports/test_report.html --self-contained-html --rootdir=/home/runner/work/TimeApi/
+      - name: Run Tests with pytest
+        run: |
+          pytest --junitxml=reports/test_report.xml
 
       - name: Upload Test Report
         uses: actions/upload-artifact@v3
         with:
-            name: test-report
-            path: reports/test_report.html
+            name: junit-test-report
+            path: reports/test_report.xml
