--- a/.github/workflows/rapports.yaml
+++ b/.github/workflows/rapports.yaml
@@ -33,11 +33,13 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           
+          # Ensure gh-pages branch exists, otherwise create it
+          git fetch origin gh-pages || git checkout --orphan gh-pages
+          
           # Checkout gh-pages branch and copy the report to it
-          git fetch origin gh-pages
           git checkout gh-pages
           cp reports/test_report.html reports/index.html
-
+          
           # Commit and push the updated report
           git add reports/index.html
           git commit -m "Ajout du rapport de test HTML"
