--- a/.github/workflows/rapports.yaml
+++ b/.github/workflows/rapports.yaml
@@ -32,15 +32,11 @@ jobs:
           # Setup Git
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          
-          # Ensure gh-pages branch exists, otherwise create it
-          git fetch origin gh-pages || git checkout --orphan gh-pages
-          
-          # Checkout gh-pages branch and copy the report to it
-          git checkout gh-pages
+     
+          git fetch origin gh-pages || git checkout gh-pages
+
           cp reports/test_report.html reports/index.html
           
-          # Commit and push the updated report
           git add reports/index.html
           git commit -m "Ajout du rapport de test HTML"
           git push origin gh-pages
