--- a/.github/workflows/rapports.yaml
+++ b/.github/workflows/rapports.yaml
@@ -33,7 +33,9 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
      
-          git fetch origin gh-pages || git checkout --orphan gh-pages
+          git fetch --all
+    
+          git checkout gh-pages || git checkout --orphan gh-pages
 
           cp reports/test_report.html reports/index.html
           
