--- a/.github/workflows/rapports.yaml
+++ b/.github/workflows/rapports.yaml
@@ -32,6 +32,8 @@ jobs:
           # Setup Git
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+
+          git stash || echo "No local changes to stash"
      
           git fetch --all
     
