--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ nav:
   - About: about.md
   - Documentation:
       - Introduction: docs/introduction.md
-      - Setup Guide: README.md
-      - Test Results: results.html
+      - Setup Guide: docs/setup.md
+      - Test Results: docs/results.html
 
 docs_dir: docs
