--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,8 +10,8 @@ nav:
   - Home: index.md
   - About: about.md
   - Documentation:
-      - Introduction: docs/introduction.md
+      - Introduction: introduction.md
       - Setup Guide: README.md
-      - Test Results: docs/results.html
+      - Test Results: results.html
 
 docs_dir: docs
