--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ nav:
   - About: about.md
   - Documentation:
       - Introduction: introduction.md
-      - Setup Guide: README.md
-      - Test Results: results.html
+      - Setup Guide: setup.md
+      - Test Results: test_report.html
 
 docs_dir: docs
