--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,14 +2,13 @@ site_name: My Documentation
 site_description: Our documentation site to get 20/20 :).
 
 # Configuration
-site_dir: site
 theme:
   name: material
 
 # Navigation structure
 nav:
   - Documentation:
-      - Setup Guide: SETUP.md
-      - Test Results: RESULTS.html
-
+      - Setup Guide: README.md
+      - Test Results: results.html
+site_dir: site
 docs_dir: docs
